# OrinInfer

./: .gitignore  CMakeLists.txt  main.cpp
include/: activation_pool.h  config.h  engine.h  kernels.h  kv_cache.h  model.h  model_loader.h  sampler.h  tokenizer.h  weight_store.h
kernels/: attention.cu  embedding.cu  fused_swiglu.cu  gemm_cute.cu  matmul.cu  rmsnorm.cu  rope.cu  softmax.cu
src/: activation_pool.cu  engine.cpp  kv_cache.cu  model.cu  model_loader.cpp  sampler.cu  tokenizer.cpp  weight_store.cu
tests/: test_buffers.cpp  test_loader.cpp  test_tokenizer.cpp  test_weights.cpp
